--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "nanostores": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.6.2"
   },
