--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@nanostores/persistent": "^1.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@xenova/transformers": "^2.17.2",
     "astro": "^4.15.9",
+    "events": "^3.3.0",
     "nanostores": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
