chore: upgrade GitHub Actions and ESLint dependencies
  - Update actions/upload-artifact from v3 to v4 across all workflows
  - Migrate from ESLint v8 to v9 with new flat config format
  - Update TypeScript ESLint packages to v8
  - Add astro-eslint-parser for better Astro file support
  - Fix quality workflow script syntax for ES modules
  - Update test screenshots with new captures

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -106,8 +106,8 @@ jobs:
           
           # Create validation script
           cat > validate-legal.js << 'EOF'
-          const fs = require('fs');
-          const path = require('path');
+          import fs from 'fs';
+          import path from 'path';
           
           const validateLegalContent = () => {
             const corpusDir = 'public/legal-corpus';
@@ -355,7 +355,7 @@ jobs:
           fi
           
       - name: 📊 Upload bundle analysis
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: bundle-analysis
           path: |
