--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "@astrojs/sitemap": "^3.1.6",
     "@playwright/test": "^1.47.2",
     "@types/node": "^22.5.5",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@eslint/js": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "astro-compress": "^2.3.1",
+    "astro-eslint-parser": "^1.0.0",
     "axe-playwright": "^2.0.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^0.31.4",
+    "eslint": "^9.0.0",
+    "eslint-plugin-astro": "^1.0.0",
+    "typescript-eslint": "^8.0.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
