fix: resolve GitHub Actions deprecations and ESLint/TypeScript   errors
  Breaking Changes:
  - Upgrade eslint-plugin-react-hooks from v4.6.2 to v5.0.0

  GitHub Actions:
  - Update actions/cache from v3 to v4 in all workflows
  - Add --legacy-peer-deps flag to npm ci commands to resolve peer
  dependency conflicts
  - Fix accessibility test JSON parsing to handle both array and
  object formats

  ESLint & TypeScript:
  - Add TypeScript declarations for Window.__translations in
  ClientTranslations.astro
  - Fix type casting for EventTarget and CustomEvent in client-side
  scripts
  - Configure ESLint to support .cjs files with proper Node.js globals
  - Add validate-build.cjs and test-integration.js to ESLint ignore
  list

  Code Quality:
  - Replace console.log with console.warn for diagnostic messages
  - Fix LegalDocument property references (identifier→id,
  lastModified→lastReform)
  - Remove unused imports and variables from test files
  - Prefix unused parameters with underscore to satisfy linting rules

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -231,7 +231,14 @@ jobs:
           # Display results
           if [ -f accessibility-report.json ]; then
             echo "\`\`\`json" >> $GITHUB_STEP_SUMMARY
-            jq '{violations: .violations | length, passes: .passes | length}' accessibility-report.json >> $GITHUB_STEP_SUMMARY
+            # Check if the report is an array or object
+            if jq -e 'type == "array"' accessibility-report.json > /dev/null 2>&1; then
+              # If array, get the first element
+              jq '.[0] | {violations: (.violations // []) | length, passes: (.passes // []) | length}' accessibility-report.json >> $GITHUB_STEP_SUMMARY
+            else
+              # If object, process directly
+              jq '{violations: (.violations // []) | length, passes: (.passes // []) | length}' accessibility-report.json >> $GITHUB_STEP_SUMMARY
+            fi
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           fi
 
