--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           cache: 'npm'
           
       - name: 📚 Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.npm
@@ -48,7 +48,7 @@ jobs:
             ${{ env.CACHE_KEY_PREFIX }}-deps-${{ runner.os }}-node-${{ matrix.node-version }}-
             
       - name: 🔧 Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         
       - name: 🔍 Lint code
         run: npm run lint
@@ -88,7 +88,7 @@ jobs:
           cache: 'npm'
           
       - name: 📚 Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.npm
@@ -96,7 +96,7 @@ jobs:
           key: ${{ env.CACHE_KEY_PREFIX }}-deps-${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
           
       - name: 🔧 Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         
       - name: 📚 Build legal corpus
         run: npm run build:corpus
@@ -139,7 +139,7 @@ jobs:
           cache: 'npm'
           
       - name: 🔧 Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         
       - name: 🔒 Run security audit
         run: npm audit --audit-level moderate
@@ -169,7 +169,7 @@ jobs:
           cache: 'npm'
           
       - name: 📚 Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.npm
@@ -177,7 +177,7 @@ jobs:
           key: ${{ env.CACHE_KEY_PREFIX }}-deps-${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
           
       - name: 🔧 Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         
       - name: 📚 Build legal corpus
         run: npm run build:corpus
@@ -227,7 +227,7 @@ jobs:
           cache: 'npm'
           
       - name: 🔧 Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         
       - name: 📚 Build legal corpus
         run: npm run build:corpus
