--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
           cache: 'npm'
           
       - name: 📚 Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.npm
@@ -54,7 +54,7 @@ jobs:
             ${{ env.CACHE_KEY_PREFIX }}-deps-${{ runner.os }}-
             
       - name: 📚 Cache legal corpus
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         id: corpus-cache
         with:
           path: |
@@ -65,7 +65,7 @@ jobs:
             ${{ env.CACHE_KEY_PREFIX }}-corpus-
             
       - name: 🧮 Cache embeddings
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         id: embeddings-cache
         with:
           path: public/embeddings
@@ -74,7 +74,7 @@ jobs:
             ${{ env.CACHE_KEY_PREFIX }}-embeddings-
             
       - name: 🔧 Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
         
       - name: 📚 Build legal corpus
         if: steps.corpus-cache.outputs.cache-hit != 'true'
