--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "test:unit": "vitest run",
     "test:e2e": "playwright test --config=playwright.e2e.config.ts",
     "test:integration": "playwright test --config=playwright.config.ts",
+    "test:dev": "node scripts/test-local-dev.js",
     "test:all": "npm run test:unit && npm run test:e2e",
     "build:corpus": "node scripts/build-corpus.js",
     "build:embeddings": "node scripts/generate-embeddings.js",
     "download:embeddings": "node scripts/download-embeddings.js",
+    "validate:deployment": "node scripts/validate-deployment.js",
+    "validate:all": "npm run lint && npm run type-check && npm run validate:deployment",
     "demo:record": "npx tsx scripts/generate-demo.ts full",
     "demo:quick": "npx tsx scripts/generate-demo.ts quick",
     "demo:chat": "npx tsx scripts/generate-demo.ts chat",
@@ -36,7 +39,9 @@
     "@xenova/transformers": "^2.17.2",
     "astro": "^4.15.9",
     "events": "^3.3.0",
+    "mammoth": "^1.8.0",
     "nanostores": "^1.0.1",
+    "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
@@ -66,6 +71,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "glob": "^11.0.3",
     "jsdom": "^26.1.0",
+    "node-fetch": "^3.3.2",
     "sharp": "^0.34.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.7",
