--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,25 +2,25 @@
   "name": "LexMX - Asistente Legal Mexicano",
   "short_name": "LexMX",
   "description": "Asistente legal mexicano con IA - consultas legales precisas basadas en legislación mexicana",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#22c55e",
   "icons": [
     {
-      "src": "favicon.svg",
+      "src": "./favicon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-192.png",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
