--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
   "name": "LexMX - Asistente Legal Mexicano",
   "short_name": "LexMX",
-  "description": "Asistente legal mexicano con IA - consultas legales precisas basadas en legislación mexicana",
+  "description": "Asistente legal mexicano con IA - consultas legales precisas basadas en legislación mexicana. Funciona sin conexión.",
   "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#22c55e",
@@ -11,23 +12,136 @@
       "src": "./favicon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "./icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "./icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
-  "categories": ["productivity", "education", "utilities"],
+  "screenshots": [
+    {
+      "src": "./screenshot-wide.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Pantalla principal de LexMX en desktop"
+    },
+    {
+      "src": "./screenshot-mobile.png",
+      "sizes": "390x844",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Interface de chat legal en móvil"
+    }
+  ],
+  "categories": ["productivity", "education", "utilities", "business"],
   "lang": "es-MX",
   "dir": "ltr",
-  "orientation": "portrait-primary"
+  "orientation": "any",
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "Nueva consulta legal",
+      "short_name": "Chat",
+      "description": "Iniciar una nueva consulta legal",
+      "url": "./chat",
+      "icons": [
+        {
+          "src": "./favicon.svg",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
+        }
+      ]
+    },
+    {
+      "name": "Mis casos",
+      "short_name": "Casos",
+      "description": "Ver y gestionar casos legales",
+      "url": "./casos",
+      "icons": [
+        {
+          "src": "./favicon.svg",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
+        }
+      ]
+    },
+    {
+      "name": "Wiki legal",
+      "short_name": "Wiki",
+      "description": "Explorar documentos legales mexicanos",
+      "url": "./wiki",
+      "icons": [
+        {
+          "src": "./favicon.svg",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
+        }
+      ]
+    },
+    {
+      "name": "Códigos legales",
+      "short_name": "Legal",
+      "description": "Buscar en códigos y leyes mexicanas",
+      "url": "./legal",
+      "icons": [
+        {
+          "src": "./favicon.svg",
+          "sizes": "96x96",
+          "type": "image/svg+xml"
+        }
+      ]
+    }
+  ],
+  "share_target": {
+    "action": "./casos/new",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "description",
+      "url": "url",
+      "files": [
+        {
+          "name": "documents",
+          "accept": ["application/pdf", ".pdf", "application/msword", ".doc", ".docx", "text/plain", ".txt"]
+        }
+      ]
+    }
+  },
+  "protocol_handlers": [
+    {
+      "protocol": "web+lexmx",
+      "url": "./cases/open?id=%s"
+    }
+  ],
+  "edge_side_panel": {
+    "preferred_width": 480
+  },
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  },
+  "display_override": ["standalone", "minimal-ui", "browser"],
+  "handle_links": "preferred"
 }
